<resources>
    <string name="app_name">PigGame</string>
    <string name="player1TextView">Player 1</string>
    <string name="player1ScoreTextView">Score</string>
    <string name="player1ScoreLabel">0</string>
    <string name="player2ScoreLabel">0</string>
    <string name="turnTextView">Player\'s turn</string>
    <string name="player2TextView">Player 2</string>
    <string name="dieImage">dieImage</string>
    <string name="pointsTextView">Points</string>
    <string name="pointScoreTextView">0</string>
    <string name="rollButton">Roll Die</string>
    <string name="endTurnButton">End Turn</string>
    <string name="newGameButton">New Game</string>
    <string name="p1WinTextEdit">Player 1 Wins!</string>
    <string name="p2WinTextEdit">Player 2 Wins!</string>
    <string name="emptyString" />
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>


    <string name="pref_enable_ai">pref_enable_ai</string>

    <string-array name="computer_roll_keys">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="computer_roll_values">
        <item >3</item>
        <item >4</item>
        <item >5</item>
    </string-array>
    <string name="default_computer_roll">3</string>


    <string-array name="computer_max_score_keys">
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="computer_max_score_values">
        <item >10</item>
        <item >15</item>
        <item >20</item>
    </string-array>
    <string name="computer_max_score">15</string>

</resources>
